--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"  />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -18,6 +20,7 @@
         tools:replace="android:allowBackup">
         <activity
             android:name=".schoolnavigation.ui.SchoolNavigationActivity"
+            android:label="@string/school_navigation_title"
             android:exported="true">
 
             <intent-filter>
