--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
+        android:name=".SchoolMateApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -19,9 +20,19 @@
         tools:replace="android:allowBackup"
         tools:targetApi="31">
         <activity
+            android:name=".documents.ui.DocumentEditorActivity"
+            android:exported="false"
+            android:label="@string/action_upload_document"/>
+        <activity
+            android:name=".documents.ui.DocumentsActivity"
+            android:exported="false"
+            android:parentActivityName=".home.ui.HomeActivity"
+            android:theme="@style/Theme.SchoolMate.NoActionBar"
+            android:label="@string/documents_title"/>
+        <activity
             android:name=".home.ui.HomeActivity"
             android:exported="false"
-            android:theme="@style/Theme.SchoolMate.NoActionBar"/>
+            android:theme="@style/Theme.SchoolMate.NoActionBar" />
         <activity
             android:name=".auth.ui.LoginActivity"
             android:exported="true"
@@ -35,11 +46,7 @@
         <activity
             android:name=".schoolnavigation.ui.SchoolNavigationActivity"
             android:exported="false"
-            android:label="@string/school_navigation_title">
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
+            android:label="@string/school_navigation_title" />
     </application>
 
 </manifest>
