--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,15 +20,18 @@
         tools:replace="android:allowBackup"
         tools:targetApi="31">
         <activity
+            android:name=".documents.ui.DocumentScannerActivity"
+            android:exported="false" />
+        <activity
             android:name=".documents.ui.DocumentEditorActivity"
             android:exported="false"
-            android:label="@string/action_upload_document"/>
+            android:label="@string/action_upload_document" />
         <activity
             android:name=".documents.ui.DocumentsActivity"
             android:exported="false"
+            android:label="@string/documents_title"
             android:parentActivityName=".home.ui.HomeActivity"
-            android:theme="@style/Theme.SchoolMate.NoActionBar"
-            android:label="@string/documents_title"/>
+            android:theme="@style/Theme.SchoolMate.NoActionBar" />
         <activity
             android:name=".alerts.ui.AlertActivity"
             android:parentActivityName=".home.ui.HomeActivity"
