--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         tools:targetApi="31">
         <activity
             android:name=".documents.ui.DocumentScannerActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/label_document_scanner_activity"/>
         <activity
             android:name=".documents.ui.DocumentEditorActivity"
             android:exported="false"
