--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         tools:targetApi="31">
         <activity
             android:name=".users.ui.UserDetailsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.SchoolMate.NoActionBar"/>
         <activity
             android:name=".users.ui.UsersActivity"
             android:exported="false"
