--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
         <activity
             android:name=".schoolnavigation.ui.SchoolNavigationActivity"
             android:exported="false"
+            android:theme="@style/Theme.SchoolMate.Navigation"
             android:label="@string/school_navigation_title" />
     </application>
 
