--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,15 @@
         tools:replace="android:allowBackup"
         tools:targetApi="31">
         <activity
+            android:name=".alerts.ui.AddAlert"
+            android:exported="false" />
+        <activity
+            android:name=".alerts.ui.AlertActivity"
+            android:exported="false" />
+        <activity
             android:name=".home.ui.HomeActivity"
             android:exported="false"
-            android:theme="@style/Theme.SchoolMate.NoActionBar"/>
+            android:theme="@style/Theme.SchoolMate.NoActionBar" />
         <activity
             android:name=".auth.ui.LoginActivity"
             android:exported="true"
@@ -35,8 +41,7 @@
         <activity
             android:name=".schoolnavigation.ui.SchoolNavigationActivity"
             android:exported="false"
-            android:label="@string/school_navigation_title">
-        </activity>
+            android:label="@string/school_navigation_title"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" />
