--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,12 @@
         tools:replace="android:allowBackup"
         tools:targetApi="31">
         <activity
+            android:name=".complaints.ui.ComplaintsActivity"
+            android:exported="false" />
+        <activity
             android:name=".documents.ui.DocumentScannerActivity"
             android:exported="false"
-            android:label="@string/label_document_scanner_activity"/>
+            android:label="@string/label_document_scanner_activity" />
         <activity
             android:name=".documents.ui.DocumentEditorActivity"
             android:exported="false"
