--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,18 @@
         tools:replace="android:allowBackup"
         tools:targetApi="31">
         <activity
+            android:name=".complaints.ui.ComplaintEditorActivity"
+            android:label="@string/add_edit_complaint"
+            android:exported="false" />
+        <activity
+            android:name=".complaints.ui.ComplaintDetailsActivity"
+            android:label="@string/view_complaint_details"
+            android:exported="false" />
+        <activity
             android:name=".complaints.ui.ComplaintsActivity"
+            android:label="@string/complaints_title"
+            android:parentActivityName=".home.ui.HomeActivity"
+            android:theme="@style/Theme.SchoolMate.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".documents.ui.DocumentScannerActivity"
