--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 
     implementation 'com.websitebeaver:documentscanner:1.3.4'
 
+    implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
+
     implementation 'org.osmdroid:osmdroid-android:6.1.14'
     implementation 'org.osmdroid:osmdroid-wms:6.1.14'
     implementation 'org.osmdroid:osmdroid-mapsforge:6.1.14'
