--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,23 +20,29 @@
         tools:replace="android:allowBackup"
         tools:targetApi="31">
         <activity
-            android:name=".complaints.ui.ComplaintEditorActivity"
-            android:label="@string/complaint_editor_title"
-            android:parentActivityName=".complaints.ui.ComplaintDetailsActivity"
-            android:theme="@style/Theme.SchoolMate.NoActionBar"
-            android:exported="false" />
-        <activity
-            android:name=".complaints.ui.ComplaintDetailsActivity"
-            android:label="@string/view_complaint_details"
-            android:parentActivityName=".complaints.ui.ComplaintsActivity"
-            android:theme="@style/Theme.SchoolMate.NoActionBar"
-            android:exported="false" />
-        <activity
-            android:name=".complaints.ui.ComplaintsActivity"
+            android:name=".complaints.ui.HandlerComplaintsActivity"
+            android:exported="false"
             android:label="@string/complaints_title"
             android:parentActivityName=".home.ui.HomeActivity"
-            android:theme="@style/Theme.SchoolMate.NoActionBar"
-            android:exported="false" />
+            android:theme="@style/Theme.SchoolMate.NoActionBar" />
+        <activity
+            android:name=".complaints.ui.ComplaintEditorActivity"
+            android:exported="false"
+            android:label="@string/complaint_editor_title"
+            android:parentActivityName=".complaints.ui.ComplaintDetailsActivity"
+            android:theme="@style/Theme.SchoolMate.NoActionBar" />
+        <activity
+            android:name=".complaints.ui.ComplaintDetailsActivity"
+            android:exported="false"
+            android:label="@string/view_complaint_details"
+            android:parentActivityName=".complaints.ui.ComplaintsActivity"
+            android:theme="@style/Theme.SchoolMate.NoActionBar" />
+        <activity
+            android:name=".complaints.ui.ComplaintsActivity"
+            android:exported="false"
+            android:label="@string/complaints_title"
+            android:parentActivityName=".home.ui.HomeActivity"
+            android:theme="@style/Theme.SchoolMate.NoActionBar" />
         <activity
             android:name=".documents.ui.DocumentScannerActivity"
             android:exported="false"
