feat: Adding the place suggestions feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,26 @@
             android:name="MAPQUEST_ACCESS_TOKEN"
             android:value="EKMpqeOlj0j6sz19ugjC8H4ORII1V57w" />
 
+        <activity android:name=".placesuggestions.ui.SuggestionsActivity"
+            android:exported="false"
+            android:label="@string/suggestions_title"
+            android:parentActivityName=".home.ui.HomeActivity"
+            android:theme="@style/Theme.SchoolMate.NoActionBar"/>
+
+        <activity android:name=".placesuggestions.ui.SuggestionDetailsActivity"
+            android:exported="false"
+            android:label="@string/suggestions_details"
+            android:parentActivityName=".placesuggestions.ui.SuggestionsActivity"
+            android:theme="@style/Theme.SchoolMate.NoActionBar"/>
+
+        <activity android:name=".placesuggestions.ui.SuggestionEditorActivity"
+            android:exported="false"
+            android:label="@string/suggestions_editor"
+            android:parentActivityName=".placesuggestions.ui.SuggestionsActivity"
+            android:theme="@style/Theme.SchoolMate.NoActionBar"/>
+
+
+
         <activity
             android:name=".shared.ui.MapSelectorActivity"
             android:exported="false"
